--- a/01Animations/style.css
+++ b/01Animations/style.css
@@ -12,8 +12,14 @@ body{
     background-color: #111;
 }
 
-#box{
+#box1{
     width: 300px;
     height: 300px;
     background-color: crimson;
+}
+
+#box2{
+    width: 300px;
+    height: 300px;
+    background-color: greenyellow;
 }
