--- a/02ScrollTrigger/style.css
+++ b/02ScrollTrigger/style.css
@@ -10,43 +10,52 @@ html,
 body{
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
 }
 
 .page1{
     width: 100%;
     height: 100%;
-    background-color: rgb(108, 190, 218);
-    display: flex;
+    background-color: rgb(255, 255, 255);
+    /* display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
 }
 .page2{
     width: 100%;
     height: 100%;
-    background-color: rgb(228, 102, 203);
-    display: flex;
+    background-color: rgb(0, 0, 0);
+    color: #fff;
+    /* display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 50px;
+    gap: 50px; */
 }
 
 .page2 h1{
-    font-size: 50px;
-    position: relative;
+    font-size: 30vw;
+    text-transform: uppercase;
 }
+
+/* .page2 h1{
+    font-size: 50px;
+    position: relative ;
+} */
 
 .page3{
     width: 100%;
     height: 100%;
-    background-color: rgb(100, 221, 70);
-    display: flex;
+    background-color: grey;
+    /* display: flex;
     align-items: center;
     justify-content: center;
+    padding: 5vw 0; */
 }
 
-.box{
+/* .box{
     width: 300px;
     height: 300px;
     background-color: crimson;
-}
+    font-weight: 500;
+} */
