--- a/03Timeline/style.css
+++ b/03Timeline/style.css
@@ -13,6 +13,10 @@ body{
     height: 100%;
 }
 
+body{
+    overflow-x: hidden;
+}
+
 #main{
     height: 100%;
     width: 100%;
@@ -31,11 +35,13 @@ body{
 
 #nav h2{
     font-size: 30px;
+    font-weight: 500;
 }
 
 #nav i{
     font-size: 30px;
     font-weight: 800;
+    cursor: pointer;
 }
 
 #full{
@@ -44,7 +50,7 @@ body{
     position: absolute;
     background-color: rgba(255, 255, 255, 0.544);
     top: 0;
-    right: 0;
+    right: -40%;
     backdrop-filter: blur(10px);
     padding: 130px 60px;
 }
@@ -53,4 +59,16 @@ body{
     font-size: 50px;
     font-weight: 500;
     margin-bottom: 10px;
+}
+
+#full i{
+    position: absolute;
+    top: 5%;
+    right: 10%;
+    background-color: #fff;
+    border-radius: 50%;
+    padding: 5px;
+    font-weight: 600;
+    font-size: 20px;
+    cursor: pointer;
 }
